fixed banner spacing

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
 	margin: auto;
 	border-radius: 10px;
 	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .banner-text h1 {
